src/components/MySessionsModal/mysessionsmodal.scss
.sessions-modal{
    background: $light-bg-color;
    position: fixed;
    float: left;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 150;
    width: 360px;
    border-radius: $small-radius;
    padding: 1rem;
    padding-bottom: 3rem;

    .sessions-modal-title{
        color: $basic-text-color;
    }

    .no-sessions{
        color: $seccond-text-color;
    }

    .close-modal-button{
        padding: 0.4rem 0.8rem;
        font-size: 1rem;
        border: none;
        border-radius: $small-radius;
        background-color: $buttons-bg;
        position: absolute;
        right: 2%;
        bottom: 3%;

        &:hover{
            background-color: $button-hover;
            cursor: pointer;
        }
    }

    .sessions-modal-sessions-container{
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin-bottom: 1rem;
    }

     @include min-width(600px){
        width: 500px;
    }
}

